kubernetes/overlays/infrastructure/svc/applications/longhorn/network-policies/allow-ingress-controller.yaml

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-controller
spec:
  podSelector:
    matchLabels:
      app: longhorn-ui
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          role: ingress-controller
      ports:
      - protocol: TCP
        port: 8000
