kubernetes/overlays/infrastructure/svc/applications/longhorn/network-policies/allow-remote-node.yaml
kind: CiliumNetworkPolicy
apiVersion: cilium.io/v2
metadata:
  name: remote-node-allow
  namespace: external-secrets
spec:
  endpointSelector:
    matchLabels:
      app: longhorn-manager
  ingress:
  - fromEntities:
    - remote-node
